Updated tests for improved coverage